--- a/jumbotron.css
+++ b/jumbotron.css
@@ -76,9 +76,6 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
-  .col-xs-12 {
-    margin-left: 0;
-  }
 }
 
 @media screen and (max-width: 620px) {
@@ -87,6 +84,7 @@ body {
   .col-xs-7, .col-xs-8, .col-xs-9,
   .col-xs-10, .col-xs-11, .col-xs-12 {
     float: none;
+    margin-left: 0 !important;
   }
 }
 
