--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -86,5 +86,9 @@ body {
     float: none;
     margin-left: 0 !important;
   }
+  /* Remove the Github ribbon to fork project */
+  #github-ribbon {
+    display: none;
+  }
 }
 
