--- a/css/agency.css
+++ b/css/agency.css
@@ -175,7 +175,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+    /*font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;*/ 
+    font-family: 'Anton', sans-serif;
     color: #fff;
 }
 
@@ -281,9 +282,12 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
+    /*
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 22px;
     font-style: italic;
+    */ 
+    font-family: 'Anton', sans-serif;
+    font-size: 22px;
     line-height: 22px;
 }
 
@@ -304,9 +308,12 @@ header .intro-text .intro-heading {
 
     header .intro-text .intro-lead-in {
         margin-bottom: 25px;
+        /*
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 40px;
         font-style: italic;
+        */ 
+        font-family: 'Anton', sans-serif;
+        font-size: 40px;
         line-height: 40px;
     }
 
@@ -314,7 +321,7 @@ header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 75px;
+        font-size: 45px;
         font-weight: 700;
         line-height: 75px;
     }
