--- a/css/agency.css
+++ b/css/agency.css
@@ -184,7 +184,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #fec503;
+    color: #3BA9E8;
 }
 
 .navbar-default .navbar-collapse {
