Retoque menor en los iconos de redes sociales en la seccion de colaboradores

--- a/css/agency.css
+++ b/css/agency.css
@@ -765,7 +765,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #fed136;
+    background-color: #3ba9e8;
 }
 
 .btn:focus,
